--- a/server/package.json
+++ b/server/package.json
@@ -16,6 +16,10 @@
     "mongoose": "^8.17.1"
   },
   "devDependencies": {
+    "@eslint/js": "^9.33.0",
+    "eslint": "^9.33.0",
+    "eslint-plugin-react": "^7.37.5",
+    "globals": "^16.3.0",
     "nodemon": "^3.1.10"
   }
 }
