--- a/client/package.json
+++ b/client/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "isro-game",
+  "name": "client",
   "private": true,
   "version": "0.0.0",
   "type": "module",
@@ -10,8 +10,6 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "axios": "^1.11.0",
-    "matter-js": "^0.20.0",
     "react": "^19.1.1",
     "react-dom": "^19.1.1"
   },
