--- a/server/package.json
+++ b/server/package.json
@@ -14,7 +14,10 @@
   "dependencies": {
     "cors": "^2.8.5",
     "dotenv": "^17.2.1",
+    "ejs": "^3.1.10",
+    "ejs-mate": "^4.0.0",
     "express": "^5.1.0",
+    "express-ejs-layouts": "^2.5.1",
     "mongoose": "^8.17.1"
   },
   "devDependencies": {
