--- a/server/package.json
+++ b/server/package.json
@@ -12,9 +12,14 @@
   "license": "ISC",
   "description": "",
   "dependencies": {
+    "connect-flash": "^0.1.1",
+    "connect-mongo": "^5.1.0",
     "cors": "^2.8.5",
     "dotenv": "^17.2.1",
+    "ejs-mate": "^4.0.0",
     "express": "^5.1.0",
+    "express-session": "^1.18.2",
+    "method-override": "^3.0.0",
     "mongoose": "^8.17.1"
   },
   "devDependencies": {
