--- a/server/package.json
+++ b/server/package.json
@@ -18,12 +18,14 @@
     "dotenv": "^17.2.1",
     "ejs": "^3.1.10",
     "ejs-mate": "^4.0.0",
-    "ejs-mate": "^4.0.0",
     "express": "^5.1.0",
     "express-ejs-layouts": "^2.5.1",
     "express-session": "^1.18.2",
     "method-override": "^3.0.0",
-    "mongoose": "^8.17.1"
+    "mongoose": "^8.17.1",
+    "passport": "^0.7.0",
+    "passport-local": "^1.0.0",
+    "passport-local-mongoose": "^8.0.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.33.0",
